<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

    <Button
            android:text="@string/n35"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn35" android:layout_marginTop="148dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" android:backgroundTint="@android:color/holo_green_light"/>
    <Button
            android:text="@string/n37"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn37" android:layout_marginTop="148dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="156dp" android:backgroundTint="@android:color/holo_green_light"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/n41"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn41" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="96dp"
            android:backgroundTint="@android:color/holo_green_light" android:layout_marginTop="220dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/n43"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn43"
            app:layout_constraintStart_toEndOf="@+id/btn41" android:layout_marginStart="48dp"
            android:backgroundTint="@android:color/holo_green_light" android:layout_marginTop="220dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/welcome_text"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvWelcome" android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textSize="20sp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUser"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="168dp"/>
    <ImageButton
            android:layout_width="41dp"
            android:layout_height="39dp" app:srcCompat="@android:drawable/ic_menu_preferences"
            android:id="@+id/btnSettings"
            android:backgroundTint="@android:color/holo_blue_light"
            android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="312dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/n39"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn39" app:layout_constraintStart_toEndOf="@+id/btn37"
            android:layout_marginStart="28dp" android:layout_marginTop="148dp"
            app:layout_constraintTop_toTopOf="parent" android:backgroundTint="@android:color/holo_green_light"/>
</android.support.constraint.ConstraintLayout>