<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginScreenActivity">

    <Switch
            android:text="@string/swRecep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/swRecep"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="216dp"
            android:layout_marginTop="344dp" app:layout_constraintTop_toTopOf="parent"/>
    <Switch
            android:text="@string/swTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/swTeacher"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="88dp"
            android:layout_marginTop="344dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tfLogin"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="100dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/tfPassword"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/tfLogin"/>
    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp" android:layout_marginTop="108dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="76dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/tfPassword"
            android:onClick="login"/>
    <Button
            android:text="@string/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:layout_marginTop="251dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnLogin" android:layout_marginStart="48dp"
            android:onClick="signUp"/>
</android.support.constraint.ConstraintLayout>