<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ClassRoomRequestActivity">

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textViewTeacher"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="40dp"
            android:layout_marginTop="104dp" app:layout_constraintTop_toTopOf="parent" android:textSize="20sp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvDate"
            android:textSize="20sp" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="68dp" android:layout_marginTop="184dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="20sp"
            android:layout_marginTop="104dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="20sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/tfStartTime"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tvDate"/>
    <TextView
            android:text="@string/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="20sp"
            android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/endingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textSize="20sp"/>
    <EditText
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/tfEndTime" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tfStartTime" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="36dp"/>
    <Switch
            android:text="@string/projector"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:id="@+id/projectorSwitch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:layout_marginTop="380dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfirm" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="236dp"
            android:layout_marginTop="404dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvClassroom" android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>